--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -36,7 +36,9 @@ services:
       - SHELL=/bin/bash
     volumes:
       - ..:/workspace:cached
+      - ../data/:/workspace/frappe-bench/temp
     working_dir: /workspace/frappe-bench
+    
     ports:
       - 8000-8005:8000-8005
       - 9000-9005:9000-9005
